Fix to search result overflow (#51)
* Fix to search result overflow

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1075,6 +1075,10 @@ table {
     }
   }
 
+  #search-results>div {
+    max-width: 100% !important;
+  }
+
   #search-input {
     margin-left: 0;
     width: 95%;
